--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,8 +1,10 @@
 # set-option -g default-terminal "tmux-256color"
-set-option -ga terminal-overrides ",$TERM:Tc"
+# set-option -ga terminal-overrides ",$TERM:Tc"
 
 # overwrite default prefix key
 set -g prefix C-t
+
+bind r source-file ~/.config/tmux/tmux.conf \; display-message "Reload Config!!"
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -13,10 +15,56 @@ set -g @plugin 'tmux-plugins/tmux-pain-control'
 
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 
-set -g @plugin 'dominikduda/tmux_mode_indicator'
-set -g @plugin 'hidetoshing/tmux-theme-nanagaiku'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 
-set -g status-right "#{tmux_mode_indicator}"
+set -g @plugin 'dominikduda/tmux_mode_indicator'
+set -g @mode_indicator_prefix '⚡ '
+
+##### tmux theme
+set -g status on
+set -g status-interval 1
+set -g status-fg default
+set -g status-bg default 
+set -g status-justify "left"
+set -g status-position top
+set -g status-left-length 160
+set -g status-right-length 300
+
+# ----- Messages -----
+set-option -g mode-style 'bg=blue, fg=black'
+set-option -g message-style 'bg=blue, fg=black'
+
+# ----- Center -----
+set-option -g status-style "bg=default"
+set-window-option -g window-status-separator ''
+
+set-window-option -g window-status-current-format "#[fg=blue,bg=default]\
+#{?window_flags,#{window_flags},} 󰓩 #I:\
+#[fg=black,bg=blue]  #W  #[fg=blue,bg=default]"
+
+set-window-option -g window-status-format "#[fg=colour242,bg=default]\
+#{?window_flags,#{window_flags},} 󰓪 #I:\
+#[fg=black,bg=colour242]  #W  #[fg=colour242,bg=default]"
+
+
+# #(printf "%s" "#{window_flags}" | sed -e "s/*/󰓩 /" -e "s/-/󰓩 /" -e "s/#/ /" -e "s/!/ /" -e "s/M/ /" -e "s/Z/󰁌 /")
+
+# set-window-option -g window-status-current-format "#[fg=blue,bg=default]\
+# #(printf '%s' #{window_flags} | sed -e 's/*/󰓩 /' -e 's/-/󰓩 /' -e 's/#/ /' -e 's/!/ /' -e 's/M/ /' -e 's/Z/󰁌 /') #I:\
+# #[fg=black,bg=blue]  #W  #[fg=blue,bg=default]"
+#
+# set-window-option -g window-status-format "#[fg=colour242,bg=default]\
+# #(printf '%s' #{window_flags} | sed -e 's/*/󰓩 /' -e 's/-/󰓩 /' -e 's/#/ /' -e 's/!/ /' -e 's/M/ /' -e 's/Z/󰁌 /') #I:\
+# #[fg=black,bg=colour242]  #W  #[fg=colour242,bg=default]"
+
+# ----- Left ----
+set-option -g status-left "#[fg=black,bg=blue]  tmux Session: #S #[fg=blue,bg=default]  #[fg=default,bg=default]"
+set-option -g status-left-style "bg=black,fg=default"
+
+# ----- Right ----
+set-option -g status-right "#[fg=colour242,bg=default]#[fg=black,bg=colour242] 󰛳 #H \
+#[bg=blue] #(date)\
+#{?pane_in_mode,#[bg=yellow] #{pane_mode},#[bg=blue] default} <<"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.config/tmux/plugins/tpm/tpm'
+run '~/.config/tmux/plugins/tpm/tpm
