--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -28,8 +28,8 @@ truncate_to_repo = false
 before_repo_root_style = 'blue'
 style = 'bold blue'
 repo_root_style = 'underline bold blue'
-repo_root_format = '[$before_root_path]($before_repo_root_style)[$repo_root]($repo_root_style)[$path]($style)[$read_only]($read_only_style) '
-truncation_symbol = '󰉋 …/'
+repo_root_format = '[󰉋 $before_root_path]($before_repo_root_style)[$repo_root]($repo_root_style)[$path]($style)[$read_only]($read_only_style) '
+truncation_symbol = '…/'
 format = '[󱂵 $path]($style)[$read_only]($read_only_style) '
 
 [cmd_duration]
