add username module for starship

--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -22,6 +22,10 @@ $username\
 $character
 """
 
+[username]
+format = '[󰀉 $user]($style) '
+show_always = true
+
 [directory]
 truncation_length = 5
 truncate_to_repo = false
