--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -58,13 +58,12 @@ set-window-option -g window-status-format "#[fg=colour242,bg=default]\
 # #[fg=black,bg=colour242]  #W  #[fg=colour242,bg=default]"
 
 # ----- Left ----
-set-option -g status-left "#[fg=black,bg=blue]  tmux Session: #S #[fg=blue,bg=default]  #[fg=default,bg=default]"
-set-option -g status-left-style "bg=black,fg=default"
-
+set-option -g status-left-style "bg=default,fg=default"
+set-option -g status-left "#[fg=black,bg=blue]  tmux Session: #S #[fg=blue,bg=default]#[fg=default,bg=default]  "
 # ----- Right ----
 set-option -g status-right "#[fg=colour242,bg=default]#[fg=black,bg=colour242] 󰛳 #H \
 #[bg=blue] #(date)\
-#{?pane_in_mode,#[bg=yellow] #{pane_mode},#[bg=blue] default} <<"
+#{?pane_in_mode,#[bg=yellow] #{pane_mode},#[bg=blue] default} "
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm
